# audit-bim-i3f

./: .env.example  .gitignore  CHANGELOG.md  MANIFEST.in  README.md  SECURITY.md  claude_desktop_config.example.json  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/workflows/: README.md  actionlint.yml  ci.yml  codeql.yml  release.yml
audit_bim/: __init__.py  cli.py  config.py  safe_paths.py
audit_bim/actions/: __init__.py  bcf_planner.py  classification_planner.py  doe_planner.py  plans.py  smartview_planner.py
audit_bim/audit/: __init__.py  comparator.py  engine.py  findings.py  ifc_hierarchy.py  validators.py
audit_bim/audit/rules/: __init__.py  classifications.py  lists.py  naming.py  properties.py  spatial.py  uniqueness.py
audit_bim/bcf/: __init__.py  builder.py
audit_bim/classifier/: __init__.py  applier.py  catalog.py  signals.py  suggester.py  suggestion_store.py  systems.py  xlsx_reader.py
audit_bim/doe/: __init__.py  address.py  conflicts.py  enricher.py  matcher.py  models.py  reporter.py
audit_bim/doe/extractors/: __init__.py  _common.py  excel.py  ocr.py  pdf.py
audit_bim/domain/: __init__.py  bim_object.py  filters.py  write_plan.py
audit_bim/enrichment/: __init__.py  address.py  ban.py  dpe.py  enricher.py  georisques.py  models.py  plu.py
audit_bim/extraction/: __init__.py  client.py  model_data.py  normalizer.py  snapshot_cache.py
audit_bim/mcp/: __init__.py  __main__.py  aliases.py  deprecation.py  middleware.py  model_identity.py  payloads.py  prompts.py  security.py  selection.py  server.py  session.py  session_credentials.py  tools_actions.py  tools_legacy.py  tools_query.py
audit_bim/query/: __init__.py  filtering.py  property_aliases.py  table_query.py  views.py
audit_bim/reporting/: BRAND_GUIDELINES.md  __init__.py  avp_i3f.py  avp_sources.py  bimdata_brand.py  context.py  korhus_brand.py  pdf_export.py  theming.py  word_report.py  xlsx_annex.py
audit_bim/requirements/: __init__.py  _openpyxl_compat.py  catalog.py  data_spec_parser.py  models.py  naming_spec_parser.py  pdf_parser.py
audit_bim/security/: __init__.py  redaction.py  write_journal.py
audit_bim/smartview/: __init__.py  builder.py
audit_bim/web/: __init__.py  setup.py
audit_bim/web/templates/: mcp_setup.html
docs/: claude_desktop_local.md  mcp_tools.md  migration_prepare_apply.md  workflow_amo_bim.md
examples/: README.md  crewai_python.py  langchain_python.py  nodejs_http.ts  nodejs_stdio.ts  openai_agents_python.py  python_direct.py
tests/: conftest.py
tests/integration/: conftest.py  test_api_key_auth.py  test_http_transport.py  test_session_isolation.py  test_workflow_amo_bim_e2e.py
tests/unit/: test_access_token_gate.py  test_actions_doe_planner.py  test_actions_planners.py  test_actions_plans.py  test_audit_comparator.py  test_audit_engine.py  test_audit_findings.py  test_audit_ifc_hierarchy.py  test_audit_validators.py  test_avp_i3f_pack.py  test_avp_sources.py  test_bim_table_query.py  test_bimdata_client_retries.py  test_classifier_applier.py  test_classifier_catalog.py  test_classifier_suggester.py  test_classifier_systems.py  test_client_api_key_param.py  test_doe_address.py  test_doe_common.py  test_doe_conflicts.py  test_doe_excel.py  test_doe_extractors_init.py  test_doe_matcher.py  test_doe_matcher_localisation.py  test_doe_models.py  test_doe_ocr.py  test_doe_pdf.py  test_doe_reporter.py  test_domain_filters.py  test_enrichment.py  test_extraction_normalizer.py  test_mcp_audit_context_validation.py  test_mcp_deprecation.py  test_mcp_filter_tools.py  test_mcp_full_audit_target.py  test_mcp_legacy_wrappers.py  test_mcp_model_identity.py  test_mcp_prepare_apply_tools.py  test_mcp_query_bim_data.py  (+21 more)
