[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "audit-bim-i3f"
version = "0.2.1"
description = "MCP server for BIM model audit against the I3F French BIM specifications (CCH BIM I3F V3.6)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [
    { name = "Stanislas Limouzi", email = "stanislas@bimdata.io" },
]
keywords = [
    "bim",
    "ifc",
    "mcp",
    "model-context-protocol",
    "audit",
    "bimdata",
    "i3f",
    "construction",
    "amo",
    "loi-mop",
    "iso-19650",
    "uniformat",
    "bcf",
    "smart-views",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Other Audience",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Natural Language :: French",
]
dependencies = [
    # Bornes hautes : protection contre les mises à jour majeures qui
    # ont déjà cassé des projets en aval. Dependabot proposera les bumps
    # via PR ; les tests CI valident chaque update.
    "requests>=2.31,<3",
    "openpyxl>=3.1,<4",
    "xlsxwriter>=3.2,<4",
    # pypdf >=6.9.1 : couvre 22 CVE recensées en 2025-2026 sur les
    # versions 5.x (cf. job CI security-audit). Usage limité à
    # ``PdfReader`` qui est stable depuis longtemps.
    "pypdf>=6.9.1,<7",
    "pdfplumber>=0.11,<1",
    "python-docx>=1.1,<2",
    "pydantic>=2.6,<3",
    "matplotlib>=3.8,<4",
    "python-dotenv>=1.0,<2",
    "fastmcp>=3.0,<4",
    "rapidfuzz>=3.6,<4",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.5",
    "build>=1.2",
    "twine>=5.0",
    "reportlab>=4.0",  # génération de PDF de test
]
test = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "reportlab>=4.0",
]
ocr = [
    "pytesseract>=0.3",
    "pdf2image>=1.16",
    "Pillow>=10",
]

[project.urls]
Homepage = "https://github.com/Slimouzi/audit-bim-i3f"
Repository = "https://github.com/Slimouzi/audit-bim-i3f"
Issues = "https://github.com/Slimouzi/audit-bim-i3f/issues"
Changelog = "https://github.com/Slimouzi/audit-bim-i3f/blob/master/CHANGELOG.md"

[project.scripts]
audit-bim = "audit_bim.cli:main"
audit-bim-mcp = "audit_bim.mcp.__main__:main"

[tool.setuptools.packages.find]
include = ["audit_bim*"]
exclude = ["tests*", "examples*", "docs*", "out*"]

[tool.setuptools.package-data]
"audit_bim" = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
]
markers = [
    "integration: tests d'intégration (démarrent un vrai serveur)",
    "slow: tests qui prennent plus d'1 seconde",
]

[tool.coverage.run]
source = ["audit_bim"]
omit = [
    "audit_bim/mcp/__main__.py",
    "audit_bim/cli.py",
    "tests/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = ["out", "examples"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (gérée par formatter)
    "B008",  # function calls in defaults
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B011"]  # asserts OK in tests
"examples/*" = ["F401", "E402"]  # imports/exemples démo
